@@ -5,9 +5,9 @@ import com.microsoft.graph.models.DirectoryObject;
 import com.microsoft.graph.models.Organization;
 import com.microsoft.graph.requests.*;
 import com.ws.azureAdIntegration.constants.Constant;
+import com.ws.azureAdIntegration.dto.AzureUserCredentialDTO;
 import com.ws.azureAdIntegration.entity.*;
 import com.ws.azureAdIntegration.repository.*;
-import com.ws.azureAdIntegration.util.AzureAuthUtil;
 import com.ws.azureAdIntegration.util.AzureEntityUtil;
 import lombok.AccessLevel;
 import lombok.experimental.FieldDefaults;
@@ -15,6 +15,8 @@ import lombok.extern.slf4j.Slf4j;
 import okhttp3.Request;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -24,8 +26,7 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE)
 public class AzureADSyncService {
     String wsTenantName;
-    String tenantEmail = "dummy@gmail.com";
-    GraphServiceClient graphClient;
+    final String tenantEmail = "dummy@gmail.com";
     final AzureUserRepository azureUserRepository;
     final AzureGroupRepository azureGroupRepository;
     final AzureDeviceRepository azureDeviceRepository;
@@ -33,14 +34,14 @@ public class AzureADSyncService {
     final AzureApplicationRepository azureApplicationRepository;
     final AzureUserGroupMembershipRepository azureUserGroupMembershipRepository;
     final AzureUserDeviceRelationshipRepository azureUserDeviceRelationshipRepository;
-    final AzureUserCredentialRepository azureUserCredentialRepository;
     final BackendApplicationLogservice backendApplicationLogservice;
-    final AzureAuthUtil azureAuthUtil;
+    final AzureADInitializerService azureInitializerService;
 
     @Autowired
     public AzureADSyncService(AzureUserRepository azureUserRepository, AzureGroupRepository azureGroupRepository, AzureDeviceRepository azureDeviceRepository,
                               AzureTenantRepository azureTenantRepository, AzureApplicationRepository azureApplicationRepository, AzureUserGroupMembershipRepository azureUserGroupMembershipRepository,
-                              AzureUserDeviceRelationshipRepository azureUserDeviceRelationshipRepository, AzureUserCredentialRepository azureUserCredentialRepository, BackendApplicationLogservice backendApplicationLogservice, AzureAuthUtil azureAuthUtil
+                              AzureUserDeviceRelationshipRepository azureUserDeviceRelationshipRepository, AzureUserCredentialRepository azureUserCredentialRepository,
+                              BackendApplicationLogservice backendApplicationLogservice, AzureADInitializerService azureInitializerService
     ) {
         this.azureUserRepository = azureUserRepository;
         this.azureGroupRepository = azureGroupRepository;
@@ -49,59 +50,52 @@ public class AzureADSyncService {
         this.azureApplicationRepository = azureApplicationRepository;
         this.azureUserGroupMembershipRepository = azureUserGroupMembershipRepository;
         this.azureUserDeviceRelationshipRepository = azureUserDeviceRelationshipRepository;
-        this.azureUserCredentialRepository = azureUserCredentialRepository;
         this.backendApplicationLogservice = backendApplicationLogservice;
-        this.azureAuthUtil = azureAuthUtil;
+        this.azureInitializerService = azureInitializerService;
     }
 
-    public AzureTenant initializeGraphClientAndSyncAzureTenant(AzureUserCredential azureUserCredential, GraphServiceClient<Request> graphClient) {
-        this.wsTenantName = azureUserCredential.getWsTenantName();
-        this.graphClient = Optional.ofNullable(graphClient)
-                .orElseGet(() -> {
-                    log.info("Validating user's Azure-AD credentials..");
-                    return azureAuthUtil.validateAzureCredentials(azureUserCredential);
-                });
-        backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.tenantEmail, Constant.ADD, Constant.AZURE_AD_DATA_SYNC_START, "Info");
-        return syncTenantData(azureUserCredential.getTenantId());
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public AzureTenant initializeGraphClientAndSyncAzureTenant(AzureUserCredentialDTO azureUserCredentialDTO, GraphServiceClient<Request> graphClient) {
+        this.wsTenantName = azureUserCredentialDTO.getWsTenantName();
+        azureInitializerService.initializeGraphClient(azureUserCredentialDTO, graphClient);
+        return syncTenantData(azureUserCredentialDTO.getTenantId());
     }
 
     protected void syncAzureADData(AzureTenant azureTenant) {
         try {
             syncApplications(azureTenant);
+            log.info("azureApplications synced....");
             List<AzureUser> azureUsers = syncUsersData(azureTenant);
+            log.info("azureUsers synced....");
             List<AzureGroup> azureGroups = syncGroupsData(azureTenant);
+            log.info("azureGroups synced....");
             List<AzureDevice> azureDevices = syncDevicesData(azureTenant);
+            log.info("azureDevices synced....");
             syncUsersGroupsMembershipData(azureUsers, azureGroups);
+            log.info("azureGroups mapped....");
             syncUsersDeviceRelationshipData(azureUsers, azureDevices);
+            log.info("azureDevices mapped....");
             backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.tenantEmail, Constant.ADD, Constant.AZURE_AD_DATA_SYNC_END, "Info");
         } catch (Exception ex) {
-            log.error("Error occurred in syncing data from Azure AD");
-            backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.wsTenantName, Constant.AZURE_SYNC_FAILURE, ex.getMessage(), "Error");
+            log.error("Error occurred in syncing data from Azure AD: {}", ex.getMessage());
+            backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.wsTenantName, Constant.ADD, String.format(Constant.AZURE_SYNC_FAILURE, ex.getMessage()), "Error");
             throw new RuntimeException(ex.getMessage());
         }
     }
 
     private AzureTenant syncTenantData(String tenantId) {
-        Organization organization = this.graphClient.organization(tenantId)
-                .buildRequest()
-                .get();
-
         // delete the existing tenant and re-create whatever has been fetched this time
-        azureTenantRepository.deleteByAzureIdAndWsTenantName(tenantId, wsTenantName);
-
+        azureTenantRepository.deleteByAzureId(tenantId);
+        azureTenantRepository.flush();
+        Organization organization = azureInitializerService.getOrganizationUsingTenantId(tenantId);
         AzureTenant azureTenant = AzureEntityUtil.createAzureTenantFromGraphOrganization(organization, AzureTenant.builder().wsTenantName(this.wsTenantName).build());
-        backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.tenantEmail, Constant.ADD, Constant.AZURE_TENANT_SAVED, "Info");
+        backendApplicationLogservice.saveAuditLog(this.wsTenantName, this.tenantEmail, Constant.ADD, Constant.AZURE_TENANT_SAVED, "INFO");
+        log.info("azureTenant synced....");
         return azureTenantRepository.save(azureTenant);
     }
 
     private void syncApplications(AzureTenant azureTenant) {
-        ApplicationCollectionPage result = this.graphClient.applications()
-                .buildRequest()
-                .get();
-
-        // Delete all applications for this azureTenant and re-create the new ones
-        azureApplicationRepository.deleteAllByAzureTenant(azureTenant);
-
+        ApplicationCollectionPage result = azureInitializerService.getApplicationCollection();
         List<AzureApplication> azureApplications = result.getCurrentPage().stream()
                 .map(graphApp -> {
                     AzureApplication azureApp = AzureEntityUtil.createAzureApplicationFromGraphApplication(
@@ -129,13 +123,7 @@ public class AzureADSyncService {
     }
 
     private List<AzureUser> syncUsersData(AzureTenant azureTenant) {
-        UserCollectionPage result = this.graphClient.users()
-                .buildRequest()
-                .get();
-
-        // delete all the users associated with azureTenant
-        azureUserRepository.deleteAllByAzureTenant(azureTenant);
-
+        UserCollectionPage result = azureInitializerService.getUsersCollection();
         List<AzureUser> azureUsers = result.getCurrentPage().stream()
                 .map(graphUser -> AzureEntityUtil.createAzureUserFromGraphUser(graphUser, AzureUser.builder()
                         .wsTenantName(this.wsTenantName)
@@ -149,13 +137,7 @@ public class AzureADSyncService {
 
 
     private List<AzureGroup> syncGroupsData(AzureTenant azureTenant) {
-        GroupCollectionPage result = this.graphClient.groups()
-                .buildRequest()
-                .get();
-
-        // Delete the existing groups and create a fresh ones from whatever has been fetched
-        azureGroupRepository.deleteAllByAzureTenant(azureTenant);
-
+        GroupCollectionPage result = azureInitializerService.getGroupCollection();
         List<AzureGroup> azureGroups = result.getCurrentPage().stream()
                 .map(group -> AzureEntityUtil.createAzureGroupFromGraphGroup(group, AzureGroup.builder()
                         .wsTenantName(this.wsTenantName)
@@ -175,22 +157,10 @@ public class AzureADSyncService {
 
     private void mapUsersGroupsMembershipData(Map<String, AzureUser> azureUserMap, Map<String, AzureGroup> azureGroupMap) {
         List<AzureUserGroupMembership> memberships = new ArrayList<>();
-
-        List<String> azureUserIds = azureUserMap.keySet().stream().collect(Collectors.toList());
-        azureUserIds.stream().forEach((userId) -> {
-            List<DirectoryObject> groups = this.graphClient.users(userId)
-                    .memberOf()
-                    .buildRequest()
-                    .get()
-                    .getCurrentPage()
-                    .stream()
-                    .filter(member -> "#microsoft.graph.group".equals(member.oDataType))
-                    .collect(Collectors.toList());
-
-            // Delete the existing user-group mappings of this userId and create a fresh mappings instead
-            azureUserGroupMembershipRepository.deleteByAzureUser(azureUserMap.get(userId));
-
-            groups.stream().forEach((group) -> {
+        List<String> azureUserIds = azureUserMap.keySet().stream().toList();
+        azureUserIds.forEach((userId) -> {
+            List<DirectoryObject> groups = azureInitializerService.getGroupsOfUser(userId);
+            groups.forEach((group) -> {
                 AzureUserGroupMembership userGroup = AzureUserGroupMembership.builder()
                         .azureUser(azureUserMap.get(userId))
                         .azureUserId(userId)
@@ -207,13 +177,7 @@ public class AzureADSyncService {
 
 
     private List<AzureDevice> syncDevicesData(AzureTenant azureTenant) {
-        DeviceCollectionPage result = this.graphClient.devices()
-                .buildRequest()
-                .get();
-
-        // Delete the existing devices for this azureTenant and re-create the fresh ones
-        azureDeviceRepository.deleteAllByAzureTenant(azureTenant);
-
+        DeviceCollectionPage result = azureInitializerService.getDeviceCollection();
         List<AzureDevice> azureDevices = result.getCurrentPage().stream()
                 .map(device -> AzureEntityUtil.createAzureDeviceFromGraphDevice(device, AzureDevice.builder()
                         .wsTenantName(this.wsTenantName)
@@ -234,21 +198,10 @@ public class AzureADSyncService {
 
     private void mapUsersDeviceRelationshipData(Map<String, AzureUser> azureUserMap, Map<String, AzureDevice> azureDeviceMap) {
         List<AzureUserDeviceRelationship> userDevices = new ArrayList<>();
-
-        List<String> azureUserIds = azureUserMap.keySet().stream().collect(Collectors.toList());
-        azureUserIds.stream().forEach((userId) -> {
-            List<DirectoryObject> devices = this.graphClient.users(userId)
-                    .registeredDevices()
-                    .buildRequest()
-                    .get()
-                    .getCurrentPage()
-                    .stream()
-                    .collect(Collectors.toList());
-
-            // Delete the existing user-device mappings of this userId and create a fresh mappings instead
-            azureUserDeviceRelationshipRepository.deleteByAzureUser(azureUserMap.get(userId));
-
-            devices.stream().forEach((device) -> {
+        List<String> azureUserIds = azureUserMap.keySet().stream().toList();
+        azureUserIds.forEach((userId) -> {
+            List<DirectoryObject> devices = azureInitializerService.getDevicesOfUser(userId);
+            devices.forEach((device) -> {
                 AzureUserDeviceRelationship userDevice = AzureUserDeviceRelationship.builder()
                         .azureUser(azureUserMap.get(userId))
                         .azureUserId(userId)
@@ -278,7 +231,7 @@ public class AzureADSyncService {
 //        result.getCurrentPage().stream().forEach((graphApp) -> {
 //            if (existingAzureAppMap.containsKey(graphApp.id)) {
 //                AzureApplication azureApp = AzureApplication.createFromGraphApplication(graphApp, existingAzureAppMap.get(graphApp.id));
-////                AzureAppRoles.fromGraphAppRoles(graphApp.appRoles, azureApp.getAppRoles());
+/// /                AzureAppRoles.fromGraphAppRoles(graphApp.appRoles, azureApp.getAppRoles());
 //
 //                mapAppRoles(graphApp.appRoles, azureApp);
 //            } else {
