@@ -4,7 +4,14 @@ import com.azure.core.http.rest.PagedIterable;
 import com.azure.resourcemanager.AzureResourceManager;
 import com.azure.resourcemanager.authorization.models.RoleAssignment;
 import com.azure.resourcemanager.authorization.models.RoleDefinition;
+import com.azure.resourcemanager.compute.models.PublicIpAddressSku;
 import com.azure.resourcemanager.compute.models.VirtualMachine;
+import com.azure.resourcemanager.containerservice.models.CredentialResult;
+import com.azure.resourcemanager.containerservice.models.KubernetesCluster;
+import com.azure.resourcemanager.containerservice.models.KubernetesClusters;
+import com.azure.resourcemanager.network.models.NetworkInterface;
+import com.azure.resourcemanager.network.models.NicIpConfiguration;
+import com.azure.resourcemanager.network.models.PublicIpAddress;
 import com.azure.resourcemanager.resources.models.PolicyAssignment;
 import com.azure.resourcemanager.resources.models.PolicyDefinition;
 import com.azure.resourcemanager.resources.models.ResourceGroup;
@@ -12,15 +19,36 @@ import com.azure.resourcemanager.resources.models.Subscription;
 import com.azure.resourcemanager.sql.models.ServerPrivateEndpointConnection;
 import com.azure.resourcemanager.sql.models.SqlDatabase;
 import com.azure.resourcemanager.sql.models.SqlServer;
-import com.ws.azureResourcesIntegration.configuration.AzureAuthConfigurationFactory;
+import com.microsoft.aad.msal4j.ClientCredentialFactory;
+import com.microsoft.aad.msal4j.ClientCredentialParameters;
+import com.microsoft.aad.msal4j.ConfidentialClientApplication;
+import com.microsoft.aad.msal4j.IAuthenticationResult;
+import com.ws.azureAdIntegration.util.GenericUtil;
+import com.ws.configuration.AzureAuthConfigurationFactory;
 import com.ws.azureResourcesIntegration.dto.*;
+import io.kubernetes.client.openapi.ApiClient;
+import io.kubernetes.client.openapi.ApiException;
+import io.kubernetes.client.openapi.Configuration;
+import io.kubernetes.client.openapi.apis.*;
+import io.kubernetes.client.openapi.models.*;
+import io.kubernetes.client.util.Config;
+import io.micrometer.common.util.StringUtils;
 import lombok.AccessLevel;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
+import org.springframework.util.ObjectUtils;
+import org.springframework.web.client.RestTemplate;
 
+import java.io.IOException;
+import java.io.StringReader;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -28,18 +56,21 @@ import java.util.stream.StreamSupport;
 @Slf4j
 @FieldDefaults(level = AccessLevel.PRIVATE)
 public class AzureResourcesTestService {
+    final String clientId2 = "f741d2f8-8ec5-4246-9051-96fd8f041267";
+    final String clientSecret2 = "C6n8Q~Pe3lYUXaRp6gLNOZUK~uM5UUSkqP~9JbuY";
+    final String tenantId2 = "0079de83-6146-45cb-a189-5d5b03507ce8";
+    final String subscriptionId2 = "15b85f1d-1983-469c-a593-46fe8fc514f7";
     final String clientId = "cb51e8d1-519c-4e18-9b2f-28d53e6badd1";
     final String clientSecret = "3F18Q~iM8DjCXg7rL~2.BZZPtdGNAzfOf2qXRdhC";
     final String tenantId = "f875ebf8-f5f0-4915-a2c9-4442e0118fd2";
     final String subscriptionId = "4769af8e-ca3d-448d-bd1a-80e03ed94158";
     final AzureAuthConfigurationFactory azureAuthConfigurationFactory;
-//    AzureResourceManager azureResourceManager =
-//            getAzureResourceManager("cb51e8d1-519c-4e18-9b2f-28d53e6badd1", "3F18Q~iM8DjCXg7rL~2.BZZPtdGNAzfOf2qXRdhC",
-//                    "f875ebf8-f5f0-4915-a2c9-4442e0118fd2",
-//                    "4769af8e-ca3d-448d-bd1a-80e03ed94158");
+    final RestTemplate restTemplate;
+
     @Autowired
-    public AzureResourcesTestService(AzureAuthConfigurationFactory azureAuthConfigurationFactory) {
+    public AzureResourcesTestService(AzureAuthConfigurationFactory azureAuthConfigurationFactory, RestTemplate restTemplate) {
         this.azureAuthConfigurationFactory = azureAuthConfigurationFactory;
+        this.restTemplate = restTemplate;
     }
 
     private AzureResourceManager getAzureResourceManager() {
@@ -54,26 +85,28 @@ public class AzureResourcesTestService {
     public Collection<VmDTO> listVMs() {
         AzureResourceManager azureResourceManager = getAzureResourceManager();
         PagedIterable<VirtualMachine> vms = azureResourceManager.virtualMachines().list();
-        return StreamSupport.stream(vms.spliterator(), false)
-                .map(vm -> VmDTO.builder()
-                        .vmId(vm.vmId())
-                        .instanceId(vm.id())
-                        .name(vm.name())
-                        .computerName(vm.computerName())
-                        .powerState(vm.powerState().toString())
-                        .size(vm.size().getValue())
-                        .osType(vm.osType().toString())
-                        .publicIPInstanceId(vm.getPrimaryPublicIPAddressId())
-                        .resourceGroupName(vm.resourceGroupName())
-                        .osDiskSize(vm.osDiskSize())
-                        .region(vm.region().name())
-                        .securityType(vm.securityType().toString())
-                        .type(vm.type())
-                        .zones(vm.innerModel().zones())
-                        .resourceIdentityType(vm.innerModel().identity() != null ? vm.innerModel().identity().type().name() : null)
-                        .ipAddress(vm.getPrimaryPublicIPAddress().ipAddress())
-                        .build())
-                .collect(Collectors.toList());
+        log.info("total: {}", vms.stream().toList().size());
+//        return StreamSupport.stream(vms.spliterator(), false)
+//                .map(vm -> VmDTO.builder()
+//                        .vmId(vm.vmId())
+//                        .instanceId(vm.id())
+//                        .name(vm.name())
+//                        .computerName(vm.computerName())
+////                        .powerState(vm.powerState().toString())
+////                        .size(vm.size().getValue())
+//                        .osType(vm.osType().toString())
+//                        .publicIPInstanceId(vm.getPrimaryPublicIPAddressId())
+//                        .resourceGroupName(vm.resourceGroupName())
+//                        .osDiskSize(vm.osDiskSize())
+//                        .region(vm.region().name())
+////                        .securityType(vm.securityType().toString())
+//                        .type(vm.type())
+////                        .zones(vm.innerModel().zones())
+//                        .resourceIdentityType(vm.innerModel().identity() != null ? vm.innerModel().identity().type().name() : null)
+//                        .ipAddress(vm.getPrimaryPublicIPAddress().ipAddress())
+//                        .build())
+//                .collect(Collectors.toList());
+        return Collections.emptyList();
     }
 
     public Collection<ResourceGroupDTO> listResourceGroups() {
@@ -92,6 +125,7 @@ public class AzureResourcesTestService {
     public Collection<StorageAccountDTO> listStorageAccounts() {
         List<StorageAccountDTO> response = new ArrayList<>();
         AzureResourceManager azureResourceManager = getAzureResourceManager();
+        log.info("total SA: {}", azureResourceManager.storageAccounts().list().stream().toList().size());
         azureResourceManager.storageAccounts().list().forEach(storageAccount -> {
             azureResourceManager.storageBlobContainers()
                     .list(storageAccount.resourceGroupName(), storageAccount.name())
@@ -101,12 +135,12 @@ public class AzureResourcesTestService {
                                 .storageAccountName(storageAccount.name())
                                 .region(storageAccount.region().toString())
                                 .createdDate(storageAccount.creationTime())
-                                .kind(storageAccount.kind().toString())
+                                .kind(GenericUtil.getOrNull(() -> storageAccount.kind().toString()))
                                 .customDomainName(storageAccount.customDomain() != null ? storageAccount.customDomain().name() : null)
                                 .blobPublicAccessAllowed(storageAccount.isBlobPublicAccessAllowed())
                                 .sharedKeyAccessAllowed(storageAccount.isSharedKeyAccessAllowed())
                                 .isAccessAllowedFromAllNetworks(storageAccount.isAccessAllowedFromAllNetworks())
-                                .publicAccess(storageAccount.publicNetworkAccess().toString())
+                                .publicAccess(GenericUtil.getOrNull(() -> storageAccount.publicNetworkAccess().toString()))
                                 .containerName(container.name())
                                 .publicAccess(container.publicAccess() != null ? container.publicAccess().toString() : null)
                                 .containerType(container.type() != null ? container.type().toString() : null) // Handle null container type
@@ -321,6 +355,186 @@ public class AzureResourcesTestService {
     }
 
 
+    public Map<String, String> listK8Clusters() {
+//        AzureResourceManager azureResourceManager = getAzureResourceManager(clientId2, clientSecret2, tenantId2, subscriptionId2);
+        AzureResourceManager azureResourceManager = getAzureResourceManager();
+        PagedIterable<KubernetesCluster> aksClusters = azureResourceManager.kubernetesClusters().list();
+        Map<String, String> clusterDetailsMap = new HashMap<>();
+
+        log.info("total: {}", aksClusters.stream().count());
+
+        for (KubernetesCluster k8Cluster : aksClusters) {
+            clusterDetailsMap.put("ID", k8Cluster.id());
+            clusterDetailsMap.put("Cluster Name", k8Cluster.name());
+            clusterDetailsMap.put("Region", k8Cluster.regionName());
+            clusterDetailsMap.put("Resource Group", k8Cluster.resourceGroupName());
+            clusterDetailsMap.put("Kubernetes Version", k8Cluster.version());
+            clusterDetailsMap.put("Region name", k8Cluster.region().name());
+            clusterDetailsMap.put("Region label", k8Cluster.region().label());
+            clusterDetailsMap.put("Service Principal Client ID", k8Cluster.servicePrincipalClientId());
+            clusterDetailsMap.put("Disk Encryption Set ID", k8Cluster.diskEncryptionSetId());
+            clusterDetailsMap.put("Power State", GenericUtil.getOrNull(() -> k8Cluster.powerState().code().getValue()));
+            clusterDetailsMap.put("Provisioning State", k8Cluster.provisioningState());
+            clusterDetailsMap.put("Type", GenericUtil.getOrNull(k8Cluster::type));
+            clusterDetailsMap.put("SKU name", GenericUtil.getOrNull(() -> k8Cluster.sku().name().getValue()));
+            clusterDetailsMap.put("SKU tier", GenericUtil.getOrNull(() -> k8Cluster.sku().tier().getValue()));
+            clusterDetailsMap.put("Is Azure RBAC Enabled", String.valueOf(k8Cluster.isAzureRbacEnabled()));
+            clusterDetailsMap.put("Public Network Access", GenericUtil.getOrNull(() -> k8Cluster.publicNetworkAccess().getValue()));
+            clusterDetailsMap.put("Node Resource Group", k8Cluster.nodeResourceGroup());
+            clusterDetailsMap.put("Is Local Accounts Enabled", String.valueOf(k8Cluster.isLocalAccountsEnabled()));
+            clusterDetailsMap.put("ManagedClusterIdentity type", GenericUtil.getOrNull(() -> k8Cluster.innerModel().identity().type().name()));
+
+//            clusterDetailsMap.put("Tags", GenericUtil.getOrNull(() -> k8Cluster.tags().values()));
+            clusterDetailsMap.put("Network Profile", GenericUtil.getOrNull(() -> k8Cluster.networkProfile().toString()));
+
+        }
+
+        return clusterDetailsMap;
+    }
+
+
+    /**
+     * CHECK:
+     * 1. Does this token belongs to the Application level itself because there is no use of a azure-user in here
+     * 2. Is it alternative of getting token of Azure AD SSO (here we are bypassing the login flow)
+     */
+    public String generateConsoleURL() {
+        try {
+            ConfidentialClientApplication app = ConfidentialClientApplication.builder(
+                            clientId,
+                            ClientCredentialFactory.createFromSecret(clientSecret))
+                    .authority("https://login.microsoftonline.com/" + tenantId)
+                    .build();
+
+            ClientCredentialParameters parameters = ClientCredentialParameters.builder(
+                            Collections.singleton("https://management.azure.com/.default"))
+                    .build();
+
+            CompletableFuture<IAuthenticationResult> future = app.acquireToken(parameters);
+            IAuthenticationResult result = future.get();
+            String token = result.idToken();
+
+            long expirationTime = System.currentTimeMillis() / 1000 + 3600;
+
+            return "https://portal.azure.com?login_hint=" + "amit@whiteswansecurity.com" + "&sessionIdToken=" + result.idToken() + "&exp=" + expirationTime;
+
+//            return "https://portal.azure.com/?token=" + result.accessToken() + "&exp=" + expirationTime;
+        } catch (Exception exp) {
+            throw new RuntimeException(exp.getMessage());
+        }
+    }
+
+
+    public String getAzureFederatedSSOUrl(String userPrincipalName, String code) throws Exception {
+        String tokenUrl = "https://login.microsoftonline.com/" + tenantId + "/oauth2/token";
+
+        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
+        body.add("grant_type", "client_credentials");
+        body.add("client_id", clientId);
+        body.add("client_secret", clientSecret);
+        body.add("resource", "https://management.azure.com/");
+        body.add("code", code);
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
+        HttpEntity<MultiValueMap<String, String>> request = new HttpEntity<>(body, headers);
+
+        ResponseEntity<Map> response = restTemplate.exchange(tokenUrl, HttpMethod.POST, request, Map.class);
+        if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) {
+            throw new RuntimeException("Failed to get access token");
+        }
+
+        String accessToken = (String) response.getBody().get("access_token");
+
+        // Step 2: Exchange this token for a session token
+        String s = "https://portal.azure.com/?token=" + accessToken;
+
+        String federatedTokenUrl = "https://portal.azure.com/" + tenantId + "/federation?user=" + userPrincipalName + "&token=" + accessToken;
+
+        return federatedTokenUrl;
+    }
+
+
+    public void listPublicIPAddressInstances() {
+        AzureResourceManager azureResourceManager = getAzureResourceManager();
+        PagedIterable<PublicIpAddress> publicIpAddresses = azureResourceManager.publicIpAddresses().listByResourceGroup("qa10_group");
+        for (PublicIpAddress publicIpAddress : publicIpAddresses) {
+            log.info("ID: {}", publicIpAddress.id());
+            log.info("IP address: {}", publicIpAddress.ipAddress());
+            log.info("IP address: {}", publicIpAddress.name());
+            log.info("IP address: {}", publicIpAddress.version());
+            log.info("IP address: {}", publicIpAddress.region());
+            log.info("IP address: {}", publicIpAddress.hasAssignedNetworkInterface());
+            log.info("IP address: {}", publicIpAddress.hasAssignedLoadBalancer());
+            log.info("IP address: {}", publicIpAddress.innerModel().type());
+            log.info("IP address: {}", publicIpAddress.ipAllocationMethod().toString());
+        }
+    }
+
+
+    /**
+     * GOAL: To determine which NIC of the target VM has any number of public IP address
+     */
+    public List<String> determineNicWithPublicIpAddressForVM(String rgName, String vmName) {
+        AzureResourceManager azureResourceManager = getAzureResourceManager();
+        VirtualMachine virtualMachine = azureResourceManager.virtualMachines().getByResourceGroup(rgName, vmName);
+        if (virtualMachine == null) {
+            throw new RuntimeException("VM not found!");
+        }
+        // Fetch all the NICs Objects for the VM
+        List<NetworkInterface> networkInterfaces = virtualMachine.networkInterfaceIds().stream()
+                .map(nicId -> azureResourceManager.networkInterfaces().getById(nicId))
+                .toList();
+
+//        networkInterfaces.forEach((networkInterface -> {
+//            log.info("id: {}", networkInterface.id());
+//            log.info("name: {}", networkInterface.name());
+//            log.info("virtualMachineId: {}", networkInterface.virtualMachineId());
+//            log.info("type: {}", networkInterface.type());
+//            log.info("resourceGroupName: {}", networkInterface.resourceGroupName());
+//            log.info("regionName: {}", networkInterface.regionName());
+//            log.info("subscriptionId: {}", networkInterface.manager().subscriptionId());
+//        }));
+
+
+        // Iterate to determine which NIC has at least one public IP address. Store the NIC instance path ID of such NIC
+        List<String> foundNICPatID = new ArrayList<>();
+        for (NetworkInterface networkInterface : networkInterfaces) {
+//            log.info("VM ID: {}", networkInterface.virtualMachineId());
+            log.info("ID: {}", networkInterface.id());
+            log.info("name: {}", networkInterface.name());
+//            for (Map.Entry<String, NicIpConfiguration> stringNicIpConfigurationEntry : networkInterface.ipConfigurations().entrySet()) {
+//                NicIpConfiguration nicIpConfiguration = stringNicIpConfigurationEntry.getValue();
+//
+//                String publicPathId = nicIpConfiguration.publicIpAddressId(); // Its the azure full path ID for the IP-Address object 1️⃣
+//
+//                if (StringUtils.isNotEmpty(publicPathId)) {
+//                    PublicIpAddress publicIpAddress = nicIpConfiguration.getPublicIpAddress();
+//                    publicIpAddress.id(); // Its the azure full path ID for the IP-Address object 1️⃣
+//
+//                    if (!ObjectUtils.isEmpty(publicIpAddress)) {
+//                        log.info("Following NIC has the public IP address: {}", networkInterface.id()); // Target NIC found which has at least one public IP
+//                        log.info("Public IP address instance path ID: {}", publicIpAddress.id()); // Target NIC found which has at least one public IP
+//                        log.info("Public IP Found: {}", publicIpAddress.ipAddress());
+//                        foundNICPatID.add(networkInterface.id());
+//                        break;
+//                    } else {
+//                        log.warn("Public IP ID exists, but could not fetch details. Reason: {} {}", "IP address DELETED", "PERMISSION issues");
+//                    }
+//                } else {
+//                    log.error("No Public IP assigned to this NIC configuration");
+//                }
+//            }
+//            if (CollectionUtils.isEmpty(foundNICPatID)) {
+//                throw new RuntimeException("NO Public NIC found for the provided VM");
+//            }
+        }
+        log.info("-------------------------");
+        log.info("Total NIC with public IP addresses: {}", foundNICPatID.size());
+        log.info("NIc path ID with public IP addresses: {}", foundNICPatID);
+
+        return foundNICPatID;
+    }
 
 
 
